# nodegui-plugin-example

./: CMakeLists.txt  README.md  binding.gyp  package-lock.json  package.json
config/: application.gypi  moc.gypi  moc.js  moc.json
src/: demo.ts  index.ts
src/cpp/QStatusBar/: nstatusbar.h  nstatusbar.hpp  qstatusbar_wrap.cpp  qstatusbar_wrap.h
src/cpp/autogen/: nstatusbar_moc.cpp
src/lib/: addon.ts  index.ts
src/lib/QStatusBar/: index.ts
src/lib/utils/: addon.ts
